# arest

./: .gitignore  .mcp.json  AREST.tex  CLAUDE.md  README.md
crates/arest/: Cargo.toml
crates/arest-foundation/: Cargo.toml
crates/arest-foundation/src/: cell_aead.rs  entropy.rs  entropy_net.rs  lib.rs
crates/arest-kernel/: Cargo.toml
crates/arest-kernel/src/: file_upload.rs  lib.rs  load_reading_persist.rs  system.rs
crates/arest/examples/: purity_overhead.rs
crates/arest/src/: ast.rs  cells_introspect.rs  check.rs  command.rs  compile.rs  compile_explicit_derivation_tests.rs  declared_writes.rs  entropy_mix.rs  evaluate.rs  fol.rs  freeze.rs  induce.rs  ingest.rs  lib.rs  main.rs  naming.rs  orient.rs  parse_forml2.rs  parse_forml2_stage1.rs  parse_forml2_stage2.rs  quota.rs  rmap.rs  sql.rs  storage.rs  types.rs
crates/arest/tests/: apply_command_fuzz.rs  cross_antecedent_comparison_e2e.rs  cross_antecedent_value_comparison_e2e.rs  cwa_negation_metamodel_rule_e2e.rs  derivation_rule_replace_on_recompile_e2e.rs  freeze_thaw_fuzz.rs  ingest_fuzz.rs  load_reading_fuzz.rs  parser_fuzz.rs  properties.rs  sherlock_induce.rs  sql_against_tasks_db.rs  ss_autofill_metamodel_rule_e2e.rs  subtype_metamodel_rule_e2e.rs  transitivity_metamodel_rule_e2e.rs  unary_derivation_e2e.rs
docs/: 04-state-machines.md  05-derivation-rules.md  14-induction.md
docs/superpowers/plans/: 2026-05-04-tutor-sandbox-and-mcp-cleanup-plan.md
readings/: forml2-grammar.md
readings/core/: core.md  derivation.md  evolution.md  imports.md  induction.md  ingest.md  instances.md  naming.md  security.md  state.md  validation.md
readings/templates/: agent-chat.md  vercel-ai.md  vercel-chat.md
scripts/: sanitize-wasm-dts.mjs  test-all.ps1
src/: broadcast-do.ts  cell-pin-aad.test.ts  entity-do-engine-apply.test.ts  entity-do-engine-read.test.ts  entity-do-engine-roundtrip.test.ts  entity-do-engine.test.ts  entity-do.test.ts  entity-do.ts
src/api/: engine.ts  entity-routes.test.ts  entity-routes.ts  router.ts  verb-dispatcher.test.ts  verb-dispatcher.ts
src/mcp/: README.md  apps.test.ts  apps.ts  cli-resolver.test.ts  cli-resolver.ts  cli-staleness.test.ts  cli-staleness.ts  federation.ts  mutation-context.test.ts  mutation-context.ts  remote.ts  server-factory.ts  server.test.ts  server.ts  tutor-sandbox.test.ts  tutor-sandbox.ts
src/mcp/prompts/: entity-modeling.md
tutor/: README.md
tutor/domains/: authoring.md  catalog.md  content.md  notifications.md  orders.md  tasks.md
(+12 files in other folders)
